--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /.vs/Projeto01/v17/.suo
+/.vs/Projeto01/DesignTimeBuild/.dtbcache.v2
